# lpc

./: .gitignore  CMakeLists.txt  README.md  mp_encode.code-workspace
source/: MPIC2_raw_AG_v2.c  main.c
source/LPC/: LPAnalyzer.c  LPAnalyzer.h  PulseSearch.h
source/MultiPulse/: PulseSearch.c  PulseSearch.h
source/SPTK/include/: SPTK.h
source/SPTK/src/lpc2lsp/: _lpc2lsp.c
source/SPTK/src/lsp2lpc/: _lsp2lpc.c
source/hdr/: BITOPA1.h  IP2A4.h  MPIC2_raw_AG.h
source/hdr/LP_hdr/: LPAnalyzer.c  LPAnalyzer.h  LSP.h
source/hdr/pgm_hdr/: img2pgm.h  pgmIO.h  picture.h
source/wav/: wav.c  wav.h
